               Kellerman)
   HBASE-826   delete table followed by recreation results in honked table
   HBASE-834   'Major' compactions and upper bound on files we compact at any
               one time (Billy Pearson via Stack)
   HBASE-858   HBase-799 Created an error in util.migration.v5.HColumnDescriptor
               (Jean-Daniel Cryans via Stack)

  IMPROVEMENTS
   HBASE-801  When a table haven't disable, shell could response in a "user
              friendly" way.
   HBASE-816  TableMap should survive USE (Andrew Purtell via Stack)
   HBASE-812  Compaction needs little better skip algo (Daniel Leffel via Stack)
   HBASE-806  Change HbaseMapWritable and RowResult to implement SortedMap
              instead of Map (Jonathan Gray via Stack)
   HBASE-830  Debugging HCM.locateRegionInMeta is painful
   HBASE-752  HBase 0.2.1 should be based on Hadoop 0.17.2
   HBASE-799  Deprecate all remaining methods that take Text as a parameter
              (Jean-Daniel Cryans via Jim Kellerman)
   HBASE-849  Speed improvement in JenkinsHash (Andrzej Bialecki via Stack)
   HBASE-752  HBase 0.2.1 should be based on Hadoop 0.17.2.1

  NEW FEATURES
  OPTIMIZATIONS

Release 0.2.0 - August 8, 2008.

  INCOMPATIBLE CHANGES
   HBASE-584   Names in the filter interface are confusing (Clint Morgan via
               Jim Kellerman) (API change for filters)
   HBASE-601   Just remove deprecated methods in HTable; 0.2 is not backward
               compatible anyways
   HBASE-82    Row keys should be array of bytes
   HBASE-76    Purge servers of Text (Done as part of HBASE-82 commit).
   HBASE-487   Replace hql w/ a hbase-friendly jirb or jython shell
               Part 1: purge of hql and added raw jirb in its place.
   HBASE-521   Improve client scanner interface
   HBASE-288   Add in-memory caching of data. Required update of hadoop to 
               0.17.0-dev.2008-02-07_12-01-58. (Tom White via Stack) 
   HBASE-696   Make bloomfilter true/false and self-sizing